# qwasm2-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bloat-report.md  clippy.toml
.cargo/: config.toml
.claude/commands/: arch-check.md  crossref.md  port-module.md
.github/workflows/: ci.yml
crates/q2-bin/: Cargo.toml
crates/q2-bin/src/: main.rs
crates/q2-bundler/: Cargo.toml
crates/q2-bundler/src/: main.rs
crates/q2-client/: Cargo.toml
crates/q2-client/src/: input.rs  lib.rs  parse.rs  state.rs  view.rs
crates/q2-common/: Cargo.toml
crates/q2-common/src/: binary.rs  cmd.rs  collision.rs  cvar.rs  error.rs  filesystem.rs  lib.rs  net_msg.rs  netchan.rs  player_ctrl.rs  pmove.rs  zone.rs
crates/q2-devserver/: Cargo.toml
crates/q2-devserver/src/: main.rs
crates/q2-game/: Cargo.toml
crates/q2-game/src/: ai.rs  combat.rs  constants.rs  entity.rs  func.rs  game.rs  items.rs  lib.rs  misc.rs  physics.rs  spawn.rs  targets.rs  traits.rs  triggers.rs  weapons.rs  world.rs
crates/q2-game/src/monster/: berserker.rs  boss2.rs  boss3.rs  brain.rs  chick.rs  flipper.rs  floater.rs  flyer.rs  gladiator.rs  gunner.rs  hover.rs  infantry.rs  insane.rs  medic.rs  mod.rs  mutant.rs  parasite.rs  soldier.rs  supertank.rs  tank.rs  turret.rs
crates/q2-game/src/player/: client.rs  hud.rs  mod.rs  trail.rs  view.rs
crates/q2-net/: Cargo.toml
crates/q2-net/src/: lib.rs
crates/q2-pak-repack/: Cargo.toml
crates/q2-pak-repack/src/: main.rs
crates/q2-platform/: Cargo.toml
crates/q2-platform/src/: keymap.rs  lib.rs
crates/q2-platform/src/wasm/: game_loop.rs  gl_context.rs  input.rs  mod.rs  pak.rs
crates/q2-render/: Cargo.toml
crates/q2-render-api/: Cargo.toml
crates/q2-render-api/src/: lib.rs
crates/q2-render/src/: bsp.rs  lib.rs
crates/q2-render/src/gl3/: mod.rs
crates/q2-server/: Cargo.toml
crates/q2-server/src/: frame.rs  game_iface.rs  init.rs  lib.rs  state.rs  world.rs
crates/q2-server/tests/: cp3_integration.rs
crates/q2-shared/: Cargo.toml
crates/q2-shared/src/: constants.rs  lib.rs  protocol.rs  types.rs
crates/q2-wasm/: Cargo.toml
crates/q2-wasm/src/: lib.rs
docs/: implementation-plan.md  project-brief.md  specification.md
docs/adr/: 001-crate-decomposition-and-trait-boundaries.md
docs/superpowers/plans/: 2026-03-26-c-to-rust-conversion.md
reviews/: server-0.1.2-review.md
tests/browser/: debug.spec.ts  package-lock.json  package.json  playwright.config.ts  qwasm2.spec.ts
