[package]
name = "q2-game"
version = "0.1.1"
edition = "2021"

[dependencies]
q2-shared = { path = "../q2-shared" }
q2-common = { path = "../q2-common" }
slotmap = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
