[package]
name = "q2-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
q2-shared = { path = "../q2-shared" }
q2-common = { path = "../q2-common" }
q2-render-api = { path = "../q2-render-api" }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }

[lints]
workspace = true
