[package]
name = "q2-platform"
version = "0.1.2"
edition = "2021"

[dependencies]
q2-shared = { path = "../q2-shared" }
q2-render-api = { path = "../q2-render-api" }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
q2-common = { path = "../q2-common" }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
glow = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "Performance",
    "WebGl2RenderingContext",
    "Window",
] }

[lints]
workspace = true
